# dash-geoportal

./: README.md  app.py  pyproject.toml  requirements.txt  tile_viewer.html
--no-tile-compression/: metadata.json
--no-tile-compression/10/628/: 453.pbf
--no-tile-compression/10/629/: 451.pbf  452.pbf  453.pbf  454.pbf  455.pbf
--no-tile-compression/10/630/: 452.pbf  453.pbf
--no-tile-compression/10/631/: 451.pbf  452.pbf  453.pbf
--no-tile-compression/11/1257/: 906.pbf
--no-tile-compression/11/1258/: 903.pbf  904.pbf
--no-tile-compression/11/1259/: 903.pbf  904.pbf  907.pbf  908.pbf  910.pbf
--no-tile-compression/11/1260/: 904.pbf  905.pbf
--no-tile-compression/11/1261/: 904.pbf  905.pbf  906.pbf
--no-tile-compression/11/1262/: 903.pbf  904.pbf  (+2 more)
dash_geoportal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: sensors.geojson
data/sensors/: S001.csv
examples/: leafletExample.py  leafletExample_oliver.py  map_oliver.js  plotly_debug.py  test_xyx_tiles.ipynb
functions/preprocess/: DatePalmField_tm2csv.ipynb  cpf_raster2shp.ipynb  cpf_shps_reorganize.ipynb  cpf_shps_simply.ipynb  datepalm_shp2geojson.ipynb  raster2tile.py  sensor_csv_preprocess.ipynb  three_class_raster.ipynb
scripts/: app_server_index.py  build_cpf_tiles.py  build_date_palm_simple.py  build_province_tiles.py  convert_province_gpkg_to_geojson.py  cpf_dynamic_tiles.py  export_cpf_tiles.py  export_province_tiles.py  mbtiles_to_xyz.py  merge_cpf_yearly_geojson.py  mosaic_cpf_dynamic.py  normalize_provinces.py  start_tile_server.py  tile_inspector.py  vectorize_cpf_tiffs_2024.py
(+515 files in other folders)
