[project]
name = "dash-geoportal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.18",
    "asyncio>=4.0.0",
    "dash>=3.2.0",
    "geopandas>=1.1.1",
    "ipyleaflet>=0.20.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyproj>=3.7.2",
    "rioxarray>=0.20.0",
    "seaborn>=0.13.2",
    "solara==1.54.0",
    "xarray>=2025.10.1",
]
